--- a/lenls/paper.tex
+++ b/lenls/paper.tex
@@ -42,20 +42,17 @@
 %                                    also used for the TOC unless
 %                                    \toctitle is used
 %
-\author{Ji\v{r}\'i Mar\v{s}\'ik\inst{1} \and Maxime Amblard\inst{2}}
+\author{Jiří Maršík\inst{1,2} \and Maxime Amblard\inst{2}}
 %
-\authorrunning{Ji\v{r}\'i Mar\v{s}\'ik et al.} % abbreviated author list (for running head)
+\authorrunning{Maršík et al.} % abbreviated author list (for running head)
 %
 %%%% list of authors for the TOC (use if author list has to be modified)
-\tocauthor{Ji\v{r}\'i Mar\v{s}\'ik and Maxime Amblard}
+\tocauthor{Jiří Maršík and Maxime Amblard}
 %
-\institute{Princeton University, Princeton NJ 08544, USA,\\
-\email{I.Ekeland@princeton.edu},\\ WWW home page:
-\texttt{http://users/\homedir iekeland/web/welcome.html}
+\institute{Université de Lorraine, LORIA, Nancy, 54000, France\\
+\email{\{jiri.marsik, maxime.amblard\}@loria.fr},\\
 \and
-Universit\'{e} de Paris-Sud,
-Laboratoire d'Analyse Num\'{e}rique, B\^{a}timent 425,\\
-F-91405 Orsay Cedex, France}
+INRIA, Nancy, 54000, France}
 
 \maketitle              % typeset the title of the contribution
 
