--- a/lenls/paper.tex
+++ b/lenls/paper.tex
@@ -42,7 +42,7 @@
 %                                    also used for the TOC unless
 %                                    \toctitle is used
 %
-\author{Jiří Maršík\inst{1,2} \and Maxime Amblard\inst{2}}
+\author{Jiří Maršík\inst{1,2} \and Maxime Amblard\inst{1,2}}
 %
 \authorrunning{Maršík et al.} % abbreviated author list (for running head)
 %
@@ -68,21 +68,122 @@ of the formalism: Graphical Abstract Categorial Grammars.
 
 \section{Motivation}
 
-Abstract Categorial Grammars (ACGs) have shown to be a viable formalism for
-elegantly encoding the dynamic nature of discourse. Proposals based on
-continuation semantics \cite{de2006towards} have tackled topics such as event
-anaphora \cite{qian2011event}, SDRT discourse structure \cite{asher2011sdrt}
-and modal accessibility constraints \cite{asher2011montagovian}. However, all
-of these treatments only consider tiny fragments of languages. We are
-interested in building a wide-coverage grammar which integrates and reconciles
-the existing formal treatments of discourse and allows us to study their
-interactions and to build discourse representations automatically.
+Abstract Categorial Grammars (ACGs) \cite{de2001towards} have shown to be a
+viable formalism for elegantly encoding the dynamic nature of
+discourse. Proposals based on continuation semantics \cite{de2006towards} have
+tackled topics such as event anaphora \cite{qian2011event}, SDRT discourse
+structure \cite{asher2011sdrt} and modal accessibility constraints
+\cite{asher2011montagovian}. However, all of these treatments only consider
+tiny fragments of languages. We are interested in building a wide-coverage
+grammar which integrates and reconciles the existing formal treatments of
+discourse and allows us to study their interactions and to build discourse
+representations automatically.
 
-In this paper, we focus on the problem of constructing a wide-coverage ACG. We
-identify a problem that comes up when one tries to enforce multiple
-constraints/dependencies in a single ACG and we propose a generalization of
-the formalism which resolves the issue.
+A presupposed condition to actually using an ACG to describe discourse in a
+large scope is to have a large scale ACG grammar in the first place. The work
+presented here was motivated by this quest for a wide-coverage ACG grammar, as
+seen from a point of view of language as a system of largely orthogonal
+constraints. Encoding ancillary constraints in a type system can make the
+system hard to read and understand. If multiple constraints written in the
+style of \cite{pogodalla2012controlling} are to be enforced in the same
+grammar, we advocate for extending the formalism to prevent the incidental
+complexity that would otherwise appear.
 
+We begin with a short review of Abstract Categorial Grammars in which we
+highlight the ways in which Abstract Categorial Grammars facilitate
+decomposition of linguistic description. We follow that by a closer look at an
+example linguistic constraint and how its treatment might look like in a
+categorial grammar, which motivates our proposed extension. We then present
+the Graphical Abstract Categorial Grammars and discuss some of its formal
+properties. We then finish with an illustration of our approach which
+incorporates linguistic contribution from multiple sources into a single
+coherent and simple grammar and discuss the limitations and challenges of
+adopting this approach.
+
+
+\section{Abstract Categorial Grammars}
+\label{sec:acg-comp}
+
+We first review the grammatical framework in which we conduct our
+work. Abstract Categorial Grammars are built upon two mathematical structures,
+\emph{(higher-order) signatures} and \emph{lexicons}.
+
+\subsection{Higher-Order Signatures}
+\label{ssec:sig}
+
+A \textbf{higher-order signature} is a set of elements that we call
+\emph{constants}, each of which is associated with a type. Formally, it
+is defined as a triple $\Sigma = \mathopen{<}A, C, \tau\mathclose{>}$,
+where:
+\begin{itemize}
+  \item $C$ is the (finite) set of constants
+  \item $A$ is a (finite) set of atomic types
+  \item $\tau$ is the type-associating mapping from $C$ to
+    $\mathcal{T}(A)$, the set of types built over $A$
+\end{itemize}
+
+In our case, $\mathcal{T}(A)$ is the implicative fragment of linear and
+intuitionistic logic with $A$ being the atomic propositions. This means
+that $\mathcal{T}(A)$ contains all the $a \in A$ and all the $\alpha \limp
+\beta$ and $\alpha \to \beta$ for $\alpha, \beta \in \mathcal{T}(A)$.
+
+A signature $\Sigma = \mathopen{<}A, C, \tau\mathclose{>}$, by itself, already
+lets us define an interesting set of structures, that is the set
+$\Lambda(\Sigma)$ of \emph{well-typed lambda terms} built upon the signature
+$\Sigma$. To make this structure even more useful, we often focus ourselves
+only on terms that have a specific \emph{distinguished type}. Using this
+notion of a signature of typed constants and some distinguished type, we can
+describe languages of, e.g. tree-like (and by extension string-like), lambda
+terms.
+
+\subsection{Lexicons}
+
+The idea of a signature is coupled with the one of \textbf{lexicon},
+which is a mapping between two different signatures (mapping the
+constants of one into well-typed terms of the other). Formally speaking,
+a lexicon $\mathcal{L}$ from a signature $\Sigma_1 = \mathopen{<}A_1,
+C_1, \tau_1\mathclose{>}$ (which we call the abstract signature) to a
+signature $\Sigma_2 = \mathopen{<}A_2, C_2, \tau_2\mathclose{>}$ (which
+we call the object signature) is a pair $\mathopen{<}F, G\mathclose{>}$
+such that:
+
+\begin{itemize}
+\item $G$ is a mapping from $C_1$ to $\Lambda(\Sigma_2)$ assigning to
+  every constant of the abstract signature a term in the object
+  signature, which can be understood as its
+  interpretation/implementation/realization.
+\item $F$ is a mapping from $A_1$ to $\mathcal{T}(A_2)$ which links the
+  abstract-level types with the object-level types that they are
+  realized as.
+\item $F$ and $G$ are compatible, meaning that for any $c \in C_1$, we
+  have $\vdash_{\Sigma_2} G(c) : \hat{F}(\tau_1(c))$ (we will be using
+  $\hat{F}$ and $\hat{G}$ to refer to the homomorphic extensions of $F$
+  and $G$ to $\mathcal{T}(A_1)$ and $\Lambda(\Sigma_1)$
+  respectively).
+\end{itemize}
+
+Now we have enough machinery in hand to describe how ACGs define
+languages. Given some signature and a distinguished type, we can talk of the
+\emph{abstract language} which is the set of well-typed terms built on that
+signature having that distinguished type. If we then also consider a lexicon
+and its abstract signature, then the language we get by mapping the abstract
+language of the signature through that lexicon is called an \emph{object
+  language}.
+
+An ACG for us will then be just a collection of signatures with their
+distinguished types and the lexicons connecting these signatures, which we
+will write down in diagrams such as the ones in Figure~\ref{fig:acg-comp}.
+
+The most common pattern will have us using two object signatures for the
+surface forms of utterances (strings) and their logical forms (logical
+propositions) and an abstract signature which is connected to both of the
+object signatures via lexicons (as we can see in
+Figure~\ref{fig:acg-comp-basic}). Parsing is then just a matter of inverting
+the surface lexicon to get the abstract term and then applying to it the
+logical lexicon. Generation is symmetric, we simply invert the logical lexicon
+and apply the surface lexicon.
+
+\subsection{Systems of ACGs}
 
 \begin{figure}[t]
   \centering
@@ -95,48 +196,74 @@ the formalism which resolves the issue.
   \begin{subfigure}[b]{0.25\textwidth}
     \centering
     \includegraphics[height=0.2\textheight]{../diagrams/serial-over-parallel.pdf}
-    \caption{\label{fig:acg-comp-constr} Adding a constraint.}
+    \caption{\label{fig:acg-comp-constr} Adding a constraint (Constraint).}
   \end{subfigure}
   \qquad
   \begin{subfigure}[b]{0.25\textwidth}
     \centering
     \includegraphics[height=0.2\textheight]{../diagrams/parallel-over-serial.pdf}
     \caption{\label{fig:acg-comp-sem} Distinguishing syntactic and
-      semantic ambiguities.}
+      semantic ambiguities (Elaboration).}
   \end{subfigure}
   \caption{\label{fig:acg-comp} Diagrams of systems of ACGs.}
 \end{figure}
 
+Besides the pattern in Figure~\ref{fig:acg-comp-basic}, there have been other
+techniques of decomposing linguistic description in the ACG literature. Here
+we will focus on two that are relevant to our work.
 
-\section{Systems of ACGs}
-\label{sec:acg-comp}
+The first constitutes the Constraint pattern used throughout
+\cite{pogodalla2012controlling}. Imagine we want our grammar to enforce a
+particular linguistic constraint, say that tensed clauses form islands for
+quantifier scope, and suppose we want to proceed by refining our types so as
+to make linguistic structures violating the constraint untypable. We could
+dive in to our grammar and rewrite it to use the new types. However, we can
+also keep the existing grammar intact and complement it with a signature and a
+lexicon that translates that signature to the abstract-most signature of our
+existing grammar. Usually, the new signature will resemble the prior
+abstract-most one, albeit with more fine-grained types necessary to express
+the constraint in question.
 
-An ACG is defined in terms of two higher-order signatures, sets of typed
-constants on which we can form well-typed lambda terms, and a
-translating function from terms of one of the signatures to terms of the
-other (the former signature being called the \emph{abstract signature},
-the latter being called the \emph{object signature} and the function
-being called a \emph{lexicon}). We are then interested in the terms of
-the abstract signature having some distinguished type and their images
-through the lexicon (these two sets of terms are called the
-\emph{abstract language} and the \emph{object language}, respectively).
+This pattern is practical for examining linguistic constraints one-by-one and
+demonstrating that the formalism is capable of expressing them
+individually. However, this pattern does not serve us much in the context of
+ACGs when we try to build a grammar which incorporates many of these at the
+same time. This is due to the fact that after grafting on the first
+constraint, its added signature now becomes the abstract-most signature in the
+grammar. Any other constraint that would be added using the Constraint pattern
+would have to be translated into this new signature. This would mean that the
+type systems of newly added constraints would have to re-enforce all of the
+constraints introduced before, therefore nullifying almost any benefit of the
+pattern.
 
-When describing languages, we are usually interested in systems of more than
-one ACG, and diagrams such as the ones on Figure~\ref{fig:acg-comp} have been
-used to explain them.
+Another pattern we will briefly mention is the Elaboration pattern in which an
+edge in the diagram (a lexicon) is expanded into two edges and an intermediate
+node (signature). We can illustrate this pattern on Tree Adjoining Grammars
+\cite{degroote02}. Suppose we have a signature describing TAG derivation trees
+and a lexicon which maps them to their yield. We might want to make this
+grammar richer, and arguably more synoptic, by elaborating the translation
+from derivation trees to yields by introducing derived trees and describe
+separately how both derivation trees produce derived trees and how derived
+trees produce the yields. This way, we can make emerge a potentially useful
+linguistic structure.
 
-In Figure~\ref{fig:acg-comp-basic}, abstract syntactic terms from the
-signature $\Sigma_{Synt}$ yield phonological strings and semantic
-representations using two different lexicons. In
-Figure~\ref{fig:acg-comp-constr}, this pattern is extended by adding a
-new abstract signature which narrows the language of syntactic terms and
-implements some linguistic constraint
-\cite{pogodalla2012controlling}. Finally, in
-Figure~\ref{fig:acg-comp-sem}, the abstract signature $\Sigma_{Synt}$ of
-Figure~\ref{fig:acg-comp-basic} is split into two signatures,
-$\Sigma_{Syntax}$ and $\Sigma_{SyntSem}$, in order to model syntactic
-and semantic ambiguities in different grammars
-\cite{pogodalla2007generalizing}.
+This pattern was used in \cite{pogodalla2007generalizing} to elaborate the
+translation from the common Montague-style \cite{montague1973proper}
+higher-order signature to its yield by introducing lower-order syntactic
+structures more reminiscent of TAG or CFG trees. This helps make a clear
+distinction between ambiguities caused by syntax and by semantics by
+segregating the purely syntactic description in the $Syntax$ signature from
+the issues of operator scope that have to be solved in the $SyntSem$ signature
+(Figure~\ref{fig:acg-comp-sem}). However, in classical ACGs, we cannot exploit
+this pattern as much as we would like. If we were to use this grammar as a
+kernel on top of which we would like to express a syntactic constraint, we
+would not be able to attach the constraint's signature directly to the
+$Syntax$ node but we would instead need to attach it to
+$SyntSem$\footnote{This is due to the fact that ACG diagrams are always
+  arborescences, in which the root node represents the abstract language from
+  whose terms are generated terms of all the object languages.}. This means
+that the syntactic constraint would end up being expressed by strengthening
+the type system of $SyntSem$, which only adds unnecessary complexity.
 
 
 \section{The Problem of Multiple Constraints}
